<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller1.Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:text="@string/manillas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtCantidad"
                android:hint="@string/cantidad" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:text="@string/material"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtMaterial"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp"
                    android:textAlignment="textStart" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmbMaterial" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/dijen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDijen"
                    android:layout_weight="0.06"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmbDijen"
                    android:layout_weight="0.04" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmbTipo" />

            </LinearLayout>

            <TextView
                android:text="@string/moneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:text="@string/peso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/r1"
                        android:layout_weight="1"
                        android:checked="true" />

                    <RadioButton
                        android:text="@string/dolar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/r2"
                        android:layout_weight="1" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/generar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGenerar"
                    android:layout_weight="1"
                    android:onClick="Compra" />

                <Button
                    android:text="@string/limpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_weight="1"
                    android:onClick="borrar (Principal)" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
